<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Label for the "Done" button on the far left of action mode toolbars. -->
    <string name="abc_action_mode_done">Done</string>
    <!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_home_description">Navigate home</string>
    <!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_up_description">Navigate up</string>
    <!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
    <string name="abc_action_menu_overflow_description">More options</string>

    <!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_search">Search</string>
    <!-- SearchView accessibility description for search text field [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_query">Search query</string>
    <!-- SearchView accessibility description for clear button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_clear">Clear query</string>
    <!-- SearchView accessibility description for submit button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_submit">Submit query</string>
    <!-- SearchView accessibility description for voice button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_voice">Voice search</string>

    <!-- ActivityChooserView - accessibility support -->
    <!-- Description of the shwoing of a popup window with activities to choose from. [CHAR LIMIT=NONE] -->
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <!-- Title for a button to expand the list of activities in ActivityChooserView [CHAR LIMIT=25] -->
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <!-- Description of a share target (both in the list of such or the default share button) in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <!-- Description of the choose target button in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with">Share with</string>

    <string name="app_name">Expenses</string>

    <string name="account_prompt">Choose an Account</string>
    <string name="accountText">Account</string>
    <string name="accountNameText">Account Name</string>
    <string name="accountOpeningBalanceText">Opening Balance</string>
    <string name="accountTitleText">Account Details</string>
    <string name="accountCurrencyText">Currency</string>
    <string name="accounts_emptyText">Use the top right menu to add an account</string>
    <string name="backupName">Backup Name</string>
    <string name="backupPassword">Password</string>
    <string name="backup">Backup</string>
    <string name="backupStatusTitle">Backup Status</string>
    <string name="editCategory">Edit Category Name</string>
    <string name="entryCreditLabel">Credit</string>
    <string name="entryDebitLabel">Debit</string>
    <string name="entryAmountText">Amount</string>
    <string name="entryDateText">Date</string>
    <string name="entryPayeeText">Payee</string>
    <string name="entryCategoryText">Category</string>
    <string name="entryTitleText">Transaction Details</string>
    <string name="entryTypeText">Type</string>
    <string name="titleAbout">About</string>
    <string name="titleAccounts">Accounts</string>
    <string name="titleEntries">Account Entries</string>
    <string name="titleCharts">Charts</string>
    <string name="titleRecurring">Repeating Transactions</string>
    <string name="titleRestore">Restore</string>
    <string name="titlePreferences">Settings</string>
    <string name="titleCategoriesActivity">Spending by category</string>

    <string name="accountAddButtonText">Add new account</string>
    <string name="newAccount">Add Account</string>
    <string name="newEntry">Add Entry</string>
    <string name="entriesAddButtonText">Add new transaction</string>
    <string name="okButtonText">Save</string>
    <string name="cancelButtonText">Discard</string>
    <string name="updateButtonText">Update</string>
    <string name="deleteButtonText">Delete</string>
    <string name="settings">Settings</string>
	<string name="enterPasswordTitle">Password Protected File</string>
    <string name="enterPassword">Enter Password</string>
    <string name="incorrectPassword">** Password Incorrect **\n\nEnter Password</string>
    <string name="menuAccounts">Account List</string>
    <string name="menuChangePassword">Change Password</string>
    <string name="menuEntries">Account Entries</string>
    <string name="menuReports">Categories</string>
    <string name="menuExport">Back up</string>
    <string name="menuRestore">Restore</string>
    <string name="menuEmail">Email CSV</string>
    <string name="titleReports">Category Report</string>
    <string name="titleBackup">Backup</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setPassword">Enter New Password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="newPasswordConfirm">Confirm New Password</string>
    <string name="newPasswordRemove">Leave both these boxes empty if you do not wish to have a password</string>
    <string name="keypadSwitchUpper">A..</string>
    <string name="keypadSwitchLower">a..</string>
    <string name="keypadSwitchNumbers">1..</string>

    <string name="add_currency">New Currency....</string>
    <string name="add_instructions">Please enter the three letter currency code and symbol for the currency you wish to add.</string>
    <string name="add_currency_prompt">Code :</string>
    <string name="add_symbol_prompt">Symbol :</string>

    <string name="restoreName">Backup Name</string>
    <string name="restorePassword">Password</string>
    <string name="restore">Restore</string>
    <string name="restoreStatusTitle">Restore Status</string>
    <string name="restoreIs">Restore is</string>
    <string name="restoreComplete">complete.</string>
    <string name="restoreCompleted">Restore Completed.</string>
	<string name="restoreAborted">Restore aborted due to an error. Please check the password is correct.</string>

    <string name="title_hidetips_preference">Hide Tips</string>
    <string name="summary_hidetips_preference">Hide the pop-up tips shown in the application</string>

    <string name="titleCategoryReport">Category : </string>
</resources>