<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_new_account"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/newAccount"
          android:orderInCategory="0"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_change_password"
          android:icon="@android:drawable/ic_menu_view"
          android:title="@string/menuChangePassword"
          android:orderInCategory="1"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_export"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/menuExport"
          android:showAsAction="ifRoom" />
        
    <item android:id="@+id/menu_restore"
          android:icon="@android:drawable/ic_menu_upload"
          android:title="@string/menuRestore"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_preferences"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/titlePreferences"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/titleAbout"
          android:showAsAction="ifRoom" />

</menu>