<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:scrollbarAlwaysDrawHorizontalTrack="false" 
				android:scrollbarAlwaysDrawVerticalTrack="false" 
				android:scrollbars="vertical"
				android:layout_weight="1">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingTop="5dip"
		    >		
            <TextView
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/entryDateText"
                android:textSize="18sp"
                android:textStyle="bold"/>

			        
            <EditText
                android:id="@+id/newEntryDateButton"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:editable="false"/>

            <TextView
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:layout_marginTop="10dip"
			        android:layout_marginLeft="20dip"
			        android:layout_marginRight="20dip"
			        android:text="@string/entryTypeText"
			        android:textSize="18sp"
					android:textStyle="bold"
			        android:gravity="left"/>

            <LinearLayout	style="?android:attr/buttonBarStyle"
                             android:layout_height="wrap_content"
                             android:layout_width="match_parent"
                             android:orientation="horizontal">
                <Button style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/creditButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/entryCreditLabel"/>
                <Button style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/debitButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/entryDebitLabel"/>
            </LinearLayout>
		    <TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/entryPayeeText"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="left"/>
		
		    <AutoCompleteTextView
		        android:id="@+id/payee"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
				android:singleLine="true"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:completionThreshold="2"
		        android:gravity="fill_horizontal"
				android:nextFocusDown="@+id/okCategory"/>
		        
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/entryCategoryText"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="left"/>
		
		    <AutoCompleteTextView 
		        android:id="@+id/category"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
				android:singleLine="true"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:completionThreshold="2"
		        android:gravity="fill_horizontal"
				android:nextFocusDown="@+id/amount"/>
		        
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/entryAmountText"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="left" 
		        />
		
			<LinearLayout	android:orientation="horizontal"
					        android:gravity="right" 
					        android:layout_height="wrap_content"
					        android:layout_width="fill_parent"
					        android:layout_marginLeft="20dip"
					        android:layout_marginRight="20dip">
			
			    <TextView 
			    	android:id="@+id/currencySymbol"
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
			        android:textSize="18sp"
					android:textStyle="bold"
			        />
			    <EditText
			        android:id="@id/amount"
			        android:layout_height="wrap_content"
			        android:layout_width="fill_parent"
					android:singleLine="true"
			        android:scrollHorizontally="false"
			        android:autoText="false"
			        android:gravity="right" 
			        android:inputType="numberDecimal"
			        android:numeric="decimal" 
			        android:maxLength="10" 
			        android:width="150sp"
			        android:text="0"
			        android:nextFocusDown="@+id/okButton"/>
			</LinearLayout>		
		</LinearLayout>
	</ScrollView>
</LinearLayout>