<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:orientation="vertical"
			android:background="#fff">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:layout_weight="0"
		android:background="#69c"
	    android:gravity="center"
	    android:orientation="horizontal">
		<TextView  
			android:text="@string/app_name"
			android:gravity="center_vertical"
		    android:layout_height="wrap_content" 
		    android:layout_width="wrap_content" 
		    android:layout_weight="1"
			android:paddingLeft="5dip"
		    android:textColor="#fff"
			android:textSize="18sp"
		    android:textStyle="bold"/>
	    <Button
	    	android:id="@+id/entries_button"
		    android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		    android:layout_weight="0"
	    	android:background="@drawable/ic_title_entries"
	    	android:visibility="invisible"
	    	/>
	</LinearLayout>
	<ScrollView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:scrollbarAlwaysDrawHorizontalTrack="false" 
				android:scrollbarAlwaysDrawVerticalTrack="false" 
				android:scrollbars="vertical"
				android:layout_weight="1">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    >
		
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/restoreName"
		        android:textColor="#000"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="left"/>
		
		    <EditText
		        android:id="@+id/name"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
				android:singleLine="true"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:gravity="fill_horizontal"/>
		        
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:text="@string/restorePassword"
		        android:textColor="#000"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="left"/>
		
		    <EditText
		        android:id="@+id/password"
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
				android:singleLine="true"
		        android:scrollHorizontally="true"
		        android:autoText="false"
		        android:gravity="fill_horizontal"/>
		        
		    <TextView 
		        android:layout_height="wrap_content"
		        android:layout_width="fill_parent"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:textColor="#000"
		        android:text="@string/restoreStatusTitle"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:gravity="center"/>
		    <TextView 
		        android:id="@+id/status"
		        android:layout_height="fill_parent"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:textColor="#000"
		        android:textSize="14sp"
				android:textStyle="bold"
		        android:gravity="left"/>
		</LinearLayout>
	</ScrollView>
	
	<LinearLayout	orientation="horizontal"
			        android:layout_height="wrap_content"
			        android:layout_width="fill_parent"
					android:paddingTop="5dip"
					android:paddingLeft="4dip"
					android:paddingRight="4dip"
					android:paddingBottom="1dip"
		            android:layout_weight="0"
					android:layout_alignParentBottom="true"
					android:background="@android:drawable/bottom_bar">
		<Button android:id="@+id/okButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                	android:layout_weight="1"
                	android:text="@string/restoreOKButton"/>
				
		<Button android:id="@+id/cancelButton"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
                	android:layout_weight="1"
				android:text="@string/cancel"/>
	</LinearLayout>
			
</LinearLayout>