<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:orientation="vertical">
	<ScrollView android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:scrollbarAlwaysDrawHorizontalTrack="false" 
				android:scrollbarAlwaysDrawVerticalTrack="false" 
				android:scrollbars="vertical"
				android:layout_weight="1">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="5dip">
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/accountNameText"
	        android:textSize="18sp"/>
	
	    <EditText
	        android:id="@+id/accountName"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
			android:singleLine="true"
	        android:scrollHorizontally="true"
	        android:autoText="false"
			android:nextFocusDown="@+id/amount"/>
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="18sp"
	        android:text="@string/accountCurrencyText"
	        android:gravity="left"/>
	
		<EditText
				android:id="@+id/currency"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:editable="false"/>
	        
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="18sp"
	        android:text="@string/accountOpeningBalanceText"
	        android:gravity="left"/>
	
			<LinearLayout	android:orientation="horizontal"
					        android:gravity="right" 
					        android:layout_height="wrap_content"
					        android:layout_width="fill_parent"
					        android:layout_marginLeft="20dip"
					        android:layout_marginRight="20dip">
	        
			    <TextView
			    	android:id="@+id/currencySymbol" 
			        android:layout_height="wrap_content"
			        android:layout_width="wrap_content"
					android:textStyle="bold"
			        android:gravity="center" 
			        />
			    <EditText
			        android:id="@id/amount"
			        android:layout_height="wrap_content"
			        android:layout_width="match_parent"
					android:singleLine="true"
			        android:scrollHorizontally="false"
			        android:autoText="false"
			        android:gravity="right" 
			        android:inputType="numberDecimal"
			        android:numeric="decimal" 
			        android:maxLength="15" 
			        android:text="0"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>	